# oss-language-inclusion

./: .gitignore  CONTRIBUTING.md  MAINTAINER_SIGNALS.md  README.md  SECURITY.md  problem-definition.md  roadmap.md
.github/ISSUE_TEMPLATE/: correction_or_general.md  maintainer_feedback.md
.github/workflows/: ci.yml
case-studies/: alberto-ramirez-i18n.md  awslabs-korean-pr972.md  contribution-evidence.md  home-assistant-issue162254.md  hoppscotch-pr5636.md  kilocode-turkish-pr7337.md  openclaw-zhCN-pr36210.md  openclaw.md  plex-rewind-portuguese-pr354.md
contributors/: README.md
docs/: record-demo.sh  usage-guide.md
docs/demo-locales/: malicious.ftl  malicious.xlf
docs/images/: i18n-security-lint-demo.cast
maintainer-feedback/: README.md  alberto-experience.md
signals/: README.md  contributor-signals.md  maintainer-signals.md  signals-overview.md
spec/: translated-string-security-checks.md
tools/cldr-plural-check/: README.md
tools/i18n-security-lint/: Dockerfile  README.md  action.yml  pyproject.toml
tools/i18n-security-lint/i18n_security_lint/: cli.py  extract.py  scanners.py
tools/i18n-security-lint/tests/: test_bidi.py  test_checks.py
tools/i18n-security-lint/tests/corpus/: clean.json  interpolation.po  malicious.json  malicious.po
